# swara-scribe

./: .gitignore  README.md  dune-project  swara_scribe.opam
example/: test.txt
lib/: dune  engraver.ml  engraver.mli  ir.ml  layout.ml  layout.mli  lexer.ml  lexer.mli  parser.ml  parser.mli  render.ml  render.mli  util.ml
test/: dune
